--- a/kubedefs/appdeploy.yaml
+++ b/kubedefs/appdeploy.yaml
@@ -23,7 +23,7 @@ spec:
             memory: "128Mi"
             cpu: "500m"
         ports:
-        - name: vproapp=port
+        - name: vproapp-port
           containerPort: 8080
       initContainers:
       - name: init-mydb
