--- a/kubedefs/appingress.yaml
+++ b/kubedefs/appingress.yaml
@@ -8,7 +8,7 @@ metadata:
   labels:
     name: myingress
 spec:
-  ingressClassName: Nginx 
+  ingressClassName: nginx 
   rules:
   - host: kubevpro.emmadev.live
     http:
