--- a/kubedefs/rmqdeploy.yaml
+++ b/kubedefs/rmqdeploy.yaml
@@ -31,6 +31,6 @@ spec:
                name: app-secret
                key: rmq-pass
          - name: RABBITMQ_DEFAULT_USER
-           value: "guest""
+           value: "guest"
 
       
