--- a/kubedefs/mcdep.yaml
+++ b/kubedefs/mcdep.yaml
@@ -18,9 +18,12 @@ spec:
       - name: vpromc
         image: memcached
         resources:
+          requests:
+            memory: "256Mi"
+            CPU: "250m"
           limits:
-            memory: "128Mi"
-            cpu: "500m"
+            memory: "512Mi"
+            cpu: "1"
         ports:
         - name: vpromc-port 
           containerPort: 11211
