--- a/kubedefs/appdeploy.yaml
+++ b/kubedefs/appdeploy.yaml
@@ -21,7 +21,7 @@ spec:
         resources:
           requests:
             memory: "256Mi"
-            CPU: "250m"
+            cpu: "250m"
           limits:
             memory: "512Mi"
             cpu: "1"
