--- a/kubedefs/dbdeploy.yaml
+++ b/kubedefs/dbdeploy.yaml
@@ -20,7 +20,7 @@ spec:
         resources:
           requests:
             memory: "512Mi"
-            CPU: "250m"
+            cpu: "250m"
           limits:
             memory: "1Gi"
             cpu: "1"
