--- a/kubedefs/mcdep.yaml
+++ b/kubedefs/mcdep.yaml
@@ -20,7 +20,7 @@ spec:
         resources:
           requests:
             memory: "256Mi"
-            CPU: "250m"
+            cpu: "250m"
           limits:
             memory: "512Mi"
             cpu: "1"
